# poc-wasm-wasi-preview-2-plugin-system

./: Cargo.toml  LICENSE  README.md
reactive-graph-custom-plugin/: Cargo.toml
reactive-graph-custom-plugin/src/: bindings.rs  lib.rs
reactive-graph-host/: Cargo.toml
reactive-graph-host/src/: main.rs
reactive-graph-plugin-api/: Cargo.toml
reactive-graph-plugin-api/src/: bindings.rs  lib.rs
reactive-graph-plugin-api/wit/: reactive-graph-plugin.wit
